syntax = "proto3";

package channel;

service ChannelService{
  rpc getAllChannels(Empty) returns(Channels){}
  rpc getChannelById(FindChannel) returns(Channel){}
  rpc createChannel(ChannelCreateDto) returns(Channel){}
  rpc updateChannel(ChannelUpdateDto) returns(Channel){}
  rpc deleteChannel(FindChannel) returns(Channel){}
  rpc addUserToChannel(AddUserToChannelDto) returns(Channel){}
  rpc removeUserFromChannel(RemoveUserToChannelDto) returns(Channel){}
}

message FindChannel{
  string id=1;
}

message User{
    string name = 1;
    string displayName = 3;
    string status = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
}

message ChannelCreateDto {
  string name = 1;
  bool isPublic = 2;
  string userCreated = 3;
}

message Channel {
  string id = 1;
  string name = 2;
  bool isPublic = 3;
  User userCreated = 4;
  repeated string userId = 5;
}

message Channels {
  repeated Channel channels = 1;
}

message ChannelUpdateDto {
  string id = 1;
  string name = 2;
  bool isPublic = 3;
}
message AddUserToChannelDto {
  repeated string users = 1;
  string channelId = 2;
}

message RemoveUserToChannelDto {
  repeated string users = 1;
  string channelId = 2;
}
message Empty {}
